feat(rule): isolate rules by application
